--- a/modal/index.html
+++ b/modal/index.html
@@ -25,11 +25,10 @@
 
         <!-- Content -->
         <div class="flex flex-col space-y-6">
-          <!-- Label & Title Container -->
           <div class="flex flex-col mb-4 space-y-3 text-center md:text-left">
             <div>
               <div
-                class="inline-block px-3 py-1 text-sm text-white bg-black rounded-full"
+                class="inline-flex px-3 py-1 text-sm text-white bg-black rounded-full"
               >
                 Free Shipping
               </div>
